Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/amazon-ssm.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amazon-ssm.adoc.po
@@ -37,8 +37,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:18
+#, fuzzy
 msgid "The SSM extension is based on https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/welcome.html[AWS Java SDK 2.x].  It's a major rewrite of the 1.x code base that offers two programming models (Blocking & Async)."
-msgstr ""
+msgstr "S3 エクステンションは link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/welcome.html[AWS Java SDK 2.x] をベースにしており、2つのプログラミングモデル(Blocking & Async)を提供する1.xのコードベースを大幅に書き換えています。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:22
@@ -53,7 +54,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:25
 msgid "https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/basics-async.html[Asynchronous programming] based on JDK's `CompletableFuture` objects and the Netty HTTP client."
-msgstr ""
+msgstr "JDK の `CompletableFuture` オブジェクトと Netty HTTP クライアントをベースにした link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/basics-async.html[非同期プログラミング]"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:27
@@ -64,12 +65,12 @@ msgstr ""
 #: upstream/_versions/main/guides/amazon-ssm.adoc:28
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:31
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:33
@@ -79,12 +80,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:34
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:35
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:36
@@ -121,7 +122,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:49
 msgid "Create an AWS profile for your local instance using AWS CLI:"
-msgstr ""
+msgstr "AWS CLIを使ってローカルインスタンスのAWSプロファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amazon-ssm.adoc:56
@@ -138,7 +139,7 @@ msgstr ""
 #: upstream/_versions/main/guides/amazon-ssm.adoc:58
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:60
@@ -148,12 +149,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:63
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:65
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:67
@@ -169,7 +170,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:71
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amazon-ssm.adoc:81
@@ -474,8 +475,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:227
+#, fuzzy
 msgid "Both SSM clients (sync and async) are configurable via the `application.properties` file that can be provided in the `src/main/resources` directory.  Additionally, you need to add to the classpath a proper implementation of the sync client. By default the extension uses the URL connection HTTP client, so you need to add a URL connection client dependency to the `pom.xml` file:"
-msgstr ""
+msgstr "SES クライアント (sync と async) は、 `src/main/resources` ディレクトリーにある `application.properties` ファイルを介して設定可能です。さらに、同期クライアントの適切な実装をクラスパスに追加する必要があります。デフォルトでは、エクステンションは URL connection HTTP クライアントを使用するので、URL connection クライアントの依存関係を `pom.xml` ファイルに追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amazon-ssm.adoc:234
@@ -490,7 +492,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:237
 msgid "If you want to use Apache HTTP client instead, configure it as follows:"
-msgstr ""
+msgstr "代わりにApache HTTPクライアントを使用したい場合は、以下のように設定します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amazon-ssm.adoc:241
@@ -501,7 +503,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:244
 msgid "And add the following dependency to the application `pom.xml`:"
-msgstr ""
+msgstr "そして、以下の依存関係をアプリケーションの `pom.xml` に追加します"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amazon-ssm.adoc:255
@@ -561,19 +563,19 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:278
 msgid "And the region from your AWS CLI profile will be used."
-msgstr ""
+msgstr "そして、AWS CLIプロファイルからのリージョンが使用されます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/amazon-ssm.adoc:279
 #, no-wrap
 msgid "Next steps"
-msgstr ""
+msgstr "次のステップ"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/amazon-ssm.adoc:281
 #, no-wrap
 msgid "Packaging"
-msgstr ""
+msgstr "パッケージング"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:285
@@ -583,18 +585,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:288
 msgid "With GraalVM installed, you can also create a native executable binary: `./mvnw clean package -Dnative`.  Depending on your system, that will take some time."
-msgstr ""
+msgstr "GraalVMをインストールした状態であれば、ネイティブの実行バイナリーを作成することもできます: `./mvnw clean package -Dnative` 。お使いのシステムにもよりますが、多少時間が掛かります。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/amazon-ssm.adoc:289
 #, no-wrap
 msgid "Going asynchronous"
-msgstr ""
+msgstr "非同期に"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:292
 msgid "Thanks to the AWS SDK v2.x used by the Quarkus extension, you can use the asynchronous programming model out of the box."
-msgstr ""
+msgstr "Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-ssm.adoc:294
@@ -696,4 +698,4 @@ msgstr ""
 #: upstream/_versions/main/guides/amazon-ssm.adoc:361
 #, no-wrap
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
