--- a/l10n/po/ja_JP/_versions/main/guides/continuous-testing.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/continuous-testing.adoc.po
@@ -34,12 +34,12 @@ msgstr ""
 #: upstream/_versions/main/guides/continuous-testing.adoc:22
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:25
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:27
@@ -49,7 +49,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:28
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:29
@@ -59,18 +59,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:30
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:31
 msgid "The completed greeter application from the link:getting-started[Getting Started Guide]"
-msgstr ""
+msgstr "link:getting-started[入門ガイド]の完成済のgreeterアプリケーション"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/continuous-testing.adoc:32
 #, no-wrap
 msgid "Introduction"
-msgstr ""
+msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:37
@@ -81,7 +81,7 @@ msgstr ""
 #: upstream/_versions/main/guides/continuous-testing.adoc:38
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:42
