Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
@@ -1004,7 +1004,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:518
 #, no-wrap
 msgid "How to check the errors in the logs"
-msgstr ""
+msgstr "ログでエラーを確認する方法"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:521
