--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
@@ -1375,7 +1375,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect.adoc:772
 #, no-wrap
 msgid "How to check the errors in the logs"
-msgstr ""
+msgstr "ログでエラーを確認する方法"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect.adoc:775
