--- a/l10n/po/ja_JP/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-05-12 18:14+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-05-15 22:20+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.4.Final released - Maintenance release'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 1.13.4.Final released - Maintenance release'\n"
+"title: 'Quarkus 1.13.4.Final リリース - メンテナンスリリース'\n"
 "date: 2021-05-12\n"
 "tags: release\n"
 "synopsis: 1.13.4.Finalは、1.13リリーストレインのメンテナンスリリースです。\n"
@@ -44,78 +44,68 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:11
-#, fuzzy
 msgid "We just released 1.13.4.Final, a new maintenance release for the 1.13 release train."
 msgstr "1.13リリーストレインの新しいメンテナンスリリースである1.13.4.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:13
-#, fuzzy
 msgid "1.13.4.Final is a safe upgrade for everyone using Quarkus 1.13."
 msgstr "1.13.4.Finalは、Quarkus 1.13を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:15
-#, fuzzy
 msgid "If you are not using 1.13 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13 migration guide]."
-msgstr "すでに1.13を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13移行ガイド]を参照してください。"
+msgstr "まだ1.13を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "What's new?"
-msgstr "最新情報は？"
+msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:18
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Full changelog"
-msgstr "フルチェンジログ"
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:21
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.4.Final[the full changelog of 1.13.4.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.4.Final[1.13.4.Finalの完全な変更履歴はGitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.4.Final[1.13.4.Finalの完全な変更履歴はGitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:22
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Come Join Us"
-msgstr "私たちと一緒に働きませんか？"
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:25
-#, fuzzy
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr "皆様からのフィードバックを大切にしていますので、バグを報告したり、改善を求めたりしてください。"
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:27
-#, fuzzy
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr "Quarkusをお使いの方、または興味のある方は、恥ずかしがらずに私たちの歓迎するコミュニティに参加してください。"
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:29
-#, fuzzy
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr "は、 link:https://github.com/quarkusio/quarkus/issues[GitHub]でフィードバックを行っています。"
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:30
-#, fuzzy
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr "コードを作って link:https://github.com/quarkusio/quarkus/pulls[PRをし]てください。"
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:31
-#, fuzzy
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr "link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト]で議論することができます。"
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:32
-#, fuzzy
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr "link:https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]で質問をしてみましょう。"
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
