--- a/l10n/po/ja_JP/_versions/main/guides/blaze-persistence.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/blaze-persistence.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-05-16 02:31+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -373,8 +373,8 @@ msgid ""
 "    @Path(\"{id}\")\n"
 "    @Transactional\n"
 "    public GiftView updateGift(@EntityViewId(\"id\") GiftUpdateView view) {\n"
-"        evm.save(em, view);\n"
-"        return evm.find(em, GiftView.class, view.getId());\n"
+"        entityViewManager.save(entityManager, view);\n"
+"        return entityViewManager.find(entityManager, GiftView.class, view.getId());\n"
 "    }\n"
 msgstr ""
 
@@ -382,8 +382,8 @@ msgstr ""
 #: upstream/_versions/main/guides/blaze-persistence.adoc:207
 #, no-wrap
 msgid ""
-"    @Path(\"{id\"})\n"
 "    @GET\n"
+"    @Path(\"{id\"})\n"
 "    @Produces(MediaType.APPLICATION_JSON)\n"
 "    public GiftView getGift(@PathParam(\"id\") Long id) {\n"
 "        return return entityViewManager.find(entityManager, GiftView.class, view.getId());\n"
