Apply translation memory

--- a/l10n/po/ja_JP/_guides/deploying-to-google-cloud.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-google-cloud.adoc.po
@@ -112,7 +112,7 @@ msgstr "アプリケーションのデプロイにはGoogle Cloudへのログイ
 #: upstream/_guides/deploying-to-google-cloud.adoc:40
 #, no-wrap
 msgid "gcloud auth login\n"
-msgstr ""
+msgstr "gcloud auth login\n"
 
 #. type: Title ==
 #: upstream/_guides/deploying-to-google-cloud.adoc:42
