--- a/l10n/po/ja_JP/_guides/funqy-amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-amazon-lambda.adoc.po
@@ -141,7 +141,7 @@ msgstr "Amazon LambdaデプロイメントごとにエクスポートできるFu
 #: upstream/_guides/funqy-amazon-lambda.adoc:57
 #, no-wrap
 msgid "quarkus.funqy.export=greet\n"
-msgstr ""
+msgstr "quarkus.funqy.export=greet\n"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda.adoc:60
@@ -182,7 +182,7 @@ msgstr "mavenを使ってプロジェクトを構築します。"
 #: upstream/_guides/funqy-amazon-lambda.adoc:76
 #, no-wrap
 msgid "./mvnw clean package\n"
-msgstr ""
+msgstr "./mvnw clean package\n"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda.adoc:79
