--- a/l10n/po/ja_JP/_guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_guides/optaplanner.adoc.po
@@ -1375,7 +1375,7 @@ msgstr ""
 #: upstream/_guides/optaplanner.adoc:729 upstream/_guides/optaplanner.adoc:974
 #, no-wrap
 msgid "import javax.inject.Inject;\n"
-msgstr ""
+msgstr "import javax.inject.Inject;\n"
 
 #. type: delimited block -
 #: upstream/_guides/optaplanner.adoc:738
