--- a/l10n/po/ja_JP/_guides/picocli.adoc.po
+++ b/l10n/po/ja_JP/_guides/picocli.adoc.po
@@ -489,7 +489,7 @@ msgstr ""
 #: upstream/_guides/picocli.adoc:253
 #, no-wrap
 msgid "import javax.inject.Inject;\n"
-msgstr ""
+msgstr "import javax.inject.Inject;\n"
 
 #. type: delimited block -
 #: upstream/_guides/picocli.adoc:259
