--- a/l10n/po/ja_JP/_versions/1.11/guides/amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/amazon-lambda.adoc.po
@@ -244,7 +244,7 @@ msgstr "mavenを使ってプロジェクトをビルドします。"
 #: upstream/_versions/1.11/guides/amazon-lambda.adoc:122
 #, no-wrap
 msgid "./mvnw clean package\n"
-msgstr ""
+msgstr "./mvnw clean package\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-lambda.adoc:125
