--- a/l10n/po/ja_JP/_versions/1.11/guides/reactive-event-bus.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/reactive-event-bus.adoc.po
@@ -638,7 +638,7 @@ msgstr "このアプリケーションは、以下の方法でパッケージン
 #: upstream/_versions/1.11/guides/reactive-event-bus.adoc:371
 #, no-wrap
 msgid "./mvnw clean package\n"
-msgstr ""
+msgstr "./mvnw clean package\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-event-bus.adoc:374
