--- a/l10n/po/ja_JP/_versions/1.7/guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/optaplanner.adoc.po
@@ -1314,7 +1314,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/optaplanner.adoc:979
 #, no-wrap
 msgid "import javax.inject.Inject;\n"
-msgstr ""
+msgstr "import javax.inject.Inject;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/optaplanner.adoc:744
