--- a/l10n/po/ja_JP/_versions/1.7/guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/qute.adoc.po
@@ -778,7 +778,7 @@ msgstr "ReportGenerator.java"
 #: upstream/_versions/1.7/guides/qute.adoc:447
 #, no-wrap
 msgid "import javax.inject.Inject;\n"
-msgstr ""
+msgstr "import javax.inject.Inject;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute.adoc:451
