--- a/l10n/po/ja_JP/_versions/1.7/guides/reactive-messaging.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/reactive-messaging.adoc.po
@@ -615,7 +615,7 @@ msgstr "このアプリケーションは、以下の方法でパッケージン
 #: upstream/_versions/1.7/guides/reactive-messaging.adoc:357
 #, no-wrap
 msgid "./mvnw clean package\n"
-msgstr ""
+msgstr "./mvnw clean package\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/reactive-messaging.adoc:360
