--- a/l10n/po/ja_JP/_versions/main/guides/deploying-to-google-cloud.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/deploying-to-google-cloud.adoc.po
@@ -119,7 +119,7 @@ msgstr "アプリケーションのデプロイにはGoogle Cloudへのログイ
 #: upstream/_versions/main/guides/deploying-to-google-cloud.adoc:41
 #, no-wrap
 msgid "gcloud auth login\n"
-msgstr ""
+msgstr "gcloud auth login\n"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/deploying-to-google-cloud.adoc:43
