--- a/l10n/po/ja_JP/_versions/main/guides/funqy-amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/funqy-amazon-lambda.adoc.po
@@ -139,7 +139,7 @@ msgstr "Amazon LambdaデプロイメントごとにエクスポートできるFu
 #: upstream/_versions/main/guides/funqy-amazon-lambda.adoc:57
 #, no-wrap
 msgid "quarkus.funqy.export=greet\n"
-msgstr ""
+msgstr "quarkus.funqy.export=greet\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/funqy-amazon-lambda.adoc:60
@@ -177,7 +177,7 @@ msgstr "mavenを使ってプロジェクトをビルドします。"
 #: upstream/_versions/main/guides/funqy-amazon-lambda.adoc:76
 #, no-wrap
 msgid "./mvnw clean package\n"
-msgstr ""
+msgstr "./mvnw clean package\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/funqy-amazon-lambda.adoc:79
