--- a/l10n/po/ja_JP/_versions/main/guides/gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/gcp-functions.adoc.po
@@ -155,7 +155,7 @@ msgstr "アプリケーションのデプロイにはGoogle Cloudへのログイ
 #: upstream/_versions/main/guides/gcp-functions.adoc:67
 #, no-wrap
 msgid "gcloud auth login\n"
-msgstr ""
+msgstr "gcloud auth login\n"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/gcp-functions.adoc:69
@@ -484,7 +484,7 @@ msgstr "関数をデプロイする前に、バケットを作成する必要が
 #: upstream/_versions/main/guides/gcp-functions.adoc:254
 #, no-wrap
 msgid "gsutil mb gs://quarkus-hello\n"
-msgstr ""
+msgstr "gsutil mb gs://quarkus-hello\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/gcp-functions.adoc:258
