--- a/l10n/po/ja_JP/_versions/main/guides/reactive-event-bus.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/reactive-event-bus.adoc.po
@@ -659,7 +659,7 @@ msgstr "このアプリケーションは、以下の方法でパッケージン
 #: upstream/_versions/main/guides/reactive-event-bus.adoc:378
 #, no-wrap
 msgid "./mvnw clean package\n"
-msgstr ""
+msgstr "./mvnw clean package\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/reactive-event-bus.adoc:381
