--- a/l10n/po/ja_JP/_guides/reactive-messaging.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-messaging.adoc.po
@@ -660,7 +660,7 @@ msgstr "このアプリケーションは、以下の方法でパッケージ化
 #: upstream/_guides/reactive-messaging.adoc:357
 #, no-wrap
 msgid "./mvnw clean package\n"
-msgstr ""
+msgstr "./mvnw clean package\n"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging.adoc:360
