--- a/l10n/po/ja_JP/_versions/1.11/guides/gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/gcp-functions.adoc.po
@@ -159,7 +159,7 @@ msgstr "アプリケーションのデプロイにはGoogle Cloudへのログイ
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:69
 #, no-wrap
 msgid "gcloud auth login\n"
-msgstr ""
+msgstr "gcloud auth login\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:72
@@ -170,7 +170,7 @@ msgstr "本ガイドの執筆時点では、Cloud Functionsはまだベータ版
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:76
 #, no-wrap
 msgid "gcloud components install beta\n"
-msgstr ""
+msgstr "gcloud components install beta\n"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:78
@@ -459,7 +459,7 @@ msgstr "このコマンドを初めて起動したときには、以下のよう
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:234
 #, no-wrap
 msgid "ERROR: (gcloud.beta.functions.deploy) OperationError: code=7, message=Build Failed: Cloud Build has not been used in project <project_name> before or it is disabled. Enable it by visiting https://console.developers.google.com/apis/api/cloudbuild.googleapis.com/overview?project=<my-project> then retry.\n"
-msgstr ""
+msgstr "ERROR: (gcloud.beta.functions.deploy) OperationError: code=7, message=Build Failed: Cloud Build has not been used in project <project_name> before or it is disabled. Enable it by visiting https://console.developers.google.com/apis/api/cloudbuild.googleapis.com/overview?project=<my-project> then retry.\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:236
@@ -499,7 +499,7 @@ msgstr "関数をデプロイする前に、バケットを作成する必要が
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:263
 #, no-wrap
 msgid "gsutil mb gs://quarkus-hello\n"
-msgstr ""
+msgstr "gsutil mb gs://quarkus-hello\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:267
@@ -587,6 +587,9 @@ msgid ""
 "  -Dartifact='com.google.cloud.functions.invoker:java-function-invoker:1.0.0-beta1' \\\n"
 "  -DoutputDirectory=.\n"
 msgstr ""
+"mvn dependency:copy \\\n"
+"  -Dartifact='com.google.cloud.functions.invoker:java-function-invoker:1.0.0-beta1' \\\n"
+"  -DoutputDirectory=.\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:328
