--- a/l10n/po/ja_JP/_versions/1.11/guides/picocli.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/picocli.adoc.po
@@ -492,7 +492,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/picocli.adoc:253
 #, no-wrap
 msgid "import javax.inject.Inject;\n"
-msgstr ""
+msgstr "import javax.inject.Inject;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/picocli.adoc:259
