--- a/l10n/po/ja_JP/_versions/1.11/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/resteasy-reactive.adoc.po
@@ -1451,7 +1451,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:649
 #, no-wrap
 msgid "import javax.inject.Inject;\n"
-msgstr ""
+msgstr "import javax.inject.Inject;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:659
