--- a/l10n/po/ja_JP/_versions/1.7/guides/gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/gcp-functions-http.adoc.po
@@ -139,7 +139,7 @@ msgstr "アプリケーションのデプロイにはGoogle Cloudへのログイ
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:64
 #, no-wrap
 msgid "gcloud auth login\n"
-msgstr ""
+msgstr "gcloud auth login\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:67
@@ -150,7 +150,7 @@ msgstr "本ガイドの執筆時点では、Cloud Functionsはまだベータ版
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:71
 #, no-wrap
 msgid "gcloud components install beta\n"
-msgstr ""
+msgstr "gcloud components install beta\n"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:73
@@ -342,7 +342,7 @@ msgstr "このコマンドを初めて起動したときには、以下のよう
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:176
 #, no-wrap
 msgid "ERROR: (gcloud.beta.functions.deploy) OperationError: code=7, message=Build Failed: Cloud Build has not been used in project <project_name> before or it is disabled. Enable it by visiting https://console.developers.google.com/apis/api/cloudbuild.googleapis.com/overview?project=<my-project> then retry.\n"
-msgstr ""
+msgstr "ERROR: (gcloud.beta.functions.deploy) OperationError: code=7, message=Build Failed: Cloud Build has not been used in project <project_name> before or it is disabled. Enable it by visiting https://console.developers.google.com/apis/api/cloudbuild.googleapis.com/overview?project=<my-project> then retry.\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:178
@@ -398,6 +398,9 @@ msgid ""
 "  -Dartifact='com.google.cloud.functions.invoker:java-function-invoker:1.0.0-beta1' \\\n"
 "  -DoutputDirectory=.\n"
 msgstr ""
+"mvn dependency:copy \\\n"
+"  -Dartifact='com.google.cloud.functions.invoker:java-function-invoker:1.0.0-beta1' \\\n"
+"  -DoutputDirectory=.\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:203
