--- a/l10n/po/ja_JP/_versions/main/guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/optaplanner.adoc.po
@@ -1310,7 +1310,7 @@ msgstr ""
 #: upstream/_versions/main/guides/optaplanner.adoc:976
 #, no-wrap
 msgid "import javax.inject.Inject;\n"
-msgstr ""
+msgstr "import javax.inject.Inject;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/optaplanner.adoc:740
