--- a/l10n/po/ja_JP/_versions/main/guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/qute.adoc.po
@@ -777,7 +777,7 @@ msgstr "ReportGenerator.java"
 #: upstream/_versions/main/guides/qute.adoc:443
 #, no-wrap
 msgid "import javax.inject.Inject;\n"
-msgstr ""
+msgstr "import javax.inject.Inject;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/qute.adoc:447
