Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-keycloak-authorization.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-15 02:28+0000\n"
+"POT-Creation-Date: 2021-05-19 02:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -398,7 +398,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-keycloak-authorization.adoc:193
-msgid "By default, applications using the `quarkus-oidc` extension are marked as a `service` type application (see `quarkus.oidc.application-type`). This extension currently supports only such `service` type applications."
+#, fuzzy
+#| msgid "By default, applications using the `quarkus-oidc` extension are marked as a `service` type application (see `quarkus.oidc.application-type`). This extension currently supports only such `service` type applications."
+msgid "By default, applications using the `quarkus-oidc` extension are marked as a `service` type application (see `quarkus.oidc.application-type`). This extension also supports only `web-app` type applications but only if the access token returned as part of the authorization code grant response is marked as a source of roles: `quarkus.oidc.roles.source=accesstoken` (`web-app` type applications check ID token roles by default)."
 msgstr "デフォルトでは、 `quarkus-oidc` エクステンションを使用するアプリケーションは `service` タイプのアプリケーションとしてマークされます ( `quarkus.oidc.application-type` を参照)。このエクステンションは現在、そのような `service` タイプのアプリケーションのみをサポートしています。"
 
 #. type: Title ==
@@ -797,67 +799,94 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-keycloak-authorization.adoc:412
 #, no-wrap
-msgid "# Tenant1\n"
+msgid "# Service Tenant\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-keycloak-authorization.adoc:416
 #, no-wrap
 msgid ""
-"quarkus.oidc.tenant1.auth-server-url=${keycloak.url}/realms/quarkus\n"
-"quarkus.oidc.tenant1.client-id=quarkus-app\n"
-"quarkus.oidc.tenant1.credentials.secret=secret\n"
+"quarkus.oidc.service-tenant.auth-server-url=${keycloak.url}/realms/quarkus\n"
+"quarkus.oidc.service-tenant.client-id=quarkus-app\n"
+"quarkus.oidc.service-tenant.credentials.secret=secret\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-keycloak-authorization.adoc:421
 #, no-wrap
 msgid ""
-"quarkus.keycloak.tenant1.policy-enforcer.enforcement-mode=PERMISSIVE\n"
-"quarkus.keycloak.tenant1.policy-enforcer.paths.1.name=Permission Resource\n"
-"quarkus.keycloak.tenant1.policy-enforcer.paths.1.path=/api/permission\n"
-"quarkus.keycloak.tenant1.policy-enforcer.paths.1.claim-information-point.claims.static-claim=static-claim\n"
+"quarkus.keycloak.service-tenant.policy-enforcer.enforcement-mode=PERMISSIVE\n"
+"quarkus.keycloak.service-tenant.policy-enforcer.paths.1.name=Permission Resource Service\n"
+"quarkus.keycloak.service-tenant.policy-enforcer.paths.1.path=/api/permission\n"
+"quarkus.keycloak.service-tenant.policy-enforcer.paths.1.claim-information-point.claims.static-claim=static-claim\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:424
+#, no-wrap
+msgid "# WebApp Tenant\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:430
+#, no-wrap
+msgid ""
+"quarkus.oidc.webapp-tenant.auth-server-url=${keycloak.url}/realms/quarkus\n"
+"quarkus.oidc.webapp-tenant.client-id=quarkus-app\n"
+"quarkus.oidc.webapp-tenant.credentials.secret=secret\n"
+"quarkus.oidc.webapp-tenant.application-type=web-app\n"
+"quarkus.oidc.webapp-tenant.roles.source=accesstoken\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:435
+#, no-wrap
+msgid ""
+"quarkus.keycloak.webapp-tenant.policy-enforcer.enforcement-mode=PERMISSIVE\n"
+"quarkus.keycloak.webapp-tenant.policy-enforcer.paths.1.name=Permission Resource WebApp\n"
+"quarkus.keycloak.webapp-tenant.policy-enforcer.paths.1.path=/api/permission\n"
+"quarkus.keycloak.webapp-tenant.policy-enforcer.paths.1.claim-information-point.claims.static-claim=static-claim\n"
 msgstr ""
 
 #. type: Title ==
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:423
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:437
 #, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:426
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:440
 msgid "The configuration is based on the official https://www.keycloak.org/docs/latest/authorization_services/index.html#_enforcer_filter[Keycloak Policy Enforcer Configuration]. If you are looking for more details about the different configuration options, please take a look at this documentation,"
 msgstr "この設定は、 link:https://www.keycloak.org/docs/latest/authorization_services/index.html#_enforcer_filter[Keycloak Policy Enforcer] の公式設定に基づいています。異なる設定オプションについての詳細をお探しの方は、こちらのドキュメントをご覧ください。"
 
 #. type: Title ==
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:429
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:443
 #, no-wrap
 msgid "References"
 msgstr "リファレンス"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:432
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:446
 msgid "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
 msgstr "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:433
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:447
 msgid "https://www.keycloak.org/docs/latest/authorization_services/index.html[Keycloak Authorization Services Documentation]"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:434
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:448
 msgid "https://openid.net/connect/[OpenID Connect]"
 msgstr "https://openid.net/connect/[OpenID Connect]"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:435
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:449
 msgid "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
 msgstr "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:435
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:449
 msgid "link:security[Quarkus Security]"
 msgstr "link:security[Quarkus Security]"
 
