--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-client-oidc-client-config-grant.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-client-oidc-client-config-grant.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-05-19 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -55,7 +55,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-oidc-client-oidc-client-config-grant.adoc:17
 #: upstream/_generated-config/main/config/quarkus-oidc-client-oidc-client-config-grant.adoc:53
 #, no-wrap
-msgid "`client`, `password`, `code`, `exchange`"
+msgid "`client`, `password`, `code`, `exchange`, `refresh`"
 msgstr ""
 
 #. type: Table
