--- a/l10n/po/ja_JP/_versions/main/guides/deploying-to-heroku.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/deploying-to-heroku.adoc.po
@@ -33,7 +33,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:12
 msgid "This guide covers:"
-msgstr ""
+msgstr "このガイドでは以下をカバーしています:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:14
@@ -64,17 +64,17 @@ msgstr ""
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:19
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:22
 msgid "For this guide you need:"
-msgstr ""
+msgstr "このガイドでは以下が必要です。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:24
 msgid "Roughly 1 hour for all modalities"
-msgstr ""
+msgstr "すべての手順を試すのに約1時間"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:25
@@ -84,7 +84,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:26
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:27
@@ -100,7 +100,7 @@ msgstr ""
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:29
 #, no-wrap
 msgid "Introduction"
-msgstr ""
+msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:34
@@ -146,12 +146,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:49
 msgid "This guide will take as input an application developed in the link:getting-started[Getting Started guide]."
-msgstr ""
+msgstr "このガイドでは、 link:getting-started[入門ガイド] で開発されたアプリケーションを入力として使用します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:52
 msgid "Make sure you have the getting-started application at hand, or clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]. The solution is located in the `getting-started` directory."
-msgstr ""
+msgstr "手元に get-started アプリケーションがあることを確認するか、Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、もしくは {quickstarts-archive-url}[archive] をダウンロードしてください。ソリューションは `getting-started` ディレクトリーにあります。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:54
