Update .po files

--- a/l10n/po/ja_JP/_data/guides-1-11.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-1-11.yaml.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-04 21:20+0900\n"
+"POT-Creation-Date: 2021-05-19 17:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2746,8 +2746,9 @@ msgstr "初めてのエクステンションのビルド"
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
-#, no-wrap
-msgid "building-my-first-extension"
+#, fuzzy, no-wrap
+#| msgid "building-my-first-extension"
+msgid "/guides/building-my-first-extension"
 msgstr "building-my-first-extension"
 
 #. type: Hash Value - Key: description
@@ -2764,8 +2765,9 @@ msgstr ""
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
-#, no-wrap
-msgid "cdi-integration"
+#, fuzzy, no-wrap
+#| msgid "cdi-integration"
+msgid "/guides/cdi-integration"
 msgstr "cdi-integration"
 
 #. type: Hash Value - Key: description
@@ -2782,9 +2784,10 @@ msgstr ""
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
-#, no-wrap
-msgid "dev-ui"
-msgstr "dev-ui"
+#, fuzzy, no-wrap
+#| msgid "/guides/cdi"
+msgid "/guides/dev-ui"
+msgstr "/guides/cdi"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
@@ -2800,8 +2803,9 @@ msgstr "すべてのビルドアイテム"
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
-#, no-wrap
-msgid "all-builditems"
+#, fuzzy, no-wrap
+#| msgid "all-builditems"
+msgid "/guides/all-builditems"
 msgstr "all-builditems"
 
 #. type: Hash Value - Key: description
@@ -2857,3 +2861,6 @@ msgstr "プラットフォームのコンセプトを理解する"
 #, no-wrap
 msgid "/guides/platform"
 msgstr "/guides/platform"
+
+#~ msgid "dev-ui"
+#~ msgstr "dev-ui"
