--- a/l10n/po/ja_JP/_data/guides-latest.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-latest.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-30 15:09+0000\n"
+"POT-Creation-Date: 2021-05-19 17:28+0000\n"
 "PO-Revision-Date: 2021-03-25 22:35+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2787,8 +2787,9 @@ msgstr "初めてのエクステンションのビルド"
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
-#, no-wrap
-msgid "building-my-first-extension"
+#, fuzzy, no-wrap
+#| msgid "building-my-first-extension"
+msgid "/guides/building-my-first-extension"
 msgstr "building-my-first-extension"
 
 #. type: Hash Value - Key: description
@@ -2805,8 +2806,9 @@ msgstr "CDIの統合"
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
-#, no-wrap
-msgid "cdi-integration"
+#, fuzzy, no-wrap
+#| msgid "cdi-integration"
+msgid "/guides/cdi-integration"
 msgstr "cdi-integration"
 
 #. type: Hash Value - Key: description
@@ -2823,9 +2825,10 @@ msgstr "Dev UIへの貢献"
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
-#, no-wrap
-msgid "dev-ui"
-msgstr "dev-ui"
+#, fuzzy, no-wrap
+#| msgid "/guides/cdi"
+msgid "/guides/dev-ui"
+msgstr "/guides/cdi"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
@@ -2841,8 +2844,9 @@ msgstr "すべてのビルドアイテム"
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
-#, no-wrap
-msgid "all-builditems"
+#, fuzzy, no-wrap
+#| msgid "all-builditems"
+msgid "/guides/all-builditems"
 msgstr "all-builditems"
 
 #. type: Hash Value - Key: description
@@ -2898,3 +2902,6 @@ msgstr "プラットフォームのコンセプトを理解する"
 #, no-wrap
 msgid "/guides/platform"
 msgstr "/guides/platform"
+
+#~ msgid "dev-ui"
+#~ msgstr "dev-ui"
