--- a/l10n/po/ja_JP/_data/guides-1-7.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-1-7.yaml.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-04 21:18+0900\n"
+"POT-Creation-Date: 2021-05-19 17:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2206,8 +2206,9 @@ msgstr "初めてのエクステンションのビルド"
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
-#, no-wrap
-msgid "building-my-first-extension"
+#, fuzzy, no-wrap
+#| msgid "building-my-first-extension"
+msgid "/guides/building-my-first-extension"
 msgstr "building-my-first-extension"
 
 #. type: Hash Value - Key: description
