--- a/l10n/po/ja_JP/_guides/topic/continuum.adoc.po
+++ b/l10n/po/ja_JP/_guides/topic/continuum.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-01 13:10+0000\n"
+"POT-Creation-Date: 2021-05-19 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -155,7 +155,7 @@ msgstr "JPAユーザーは、データベースへのアクセスに使用され
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:79
 #, fuzzy
-msgid "Let's now imagine you need to access another HTTP endpoint.  You can use a HTTP client directly, this is nothing more than repeating boilerplate code.  Quarkus provides a way to call HTTP endpoint easily using the MicroProfile Rest Client API."
+msgid "Let's now imagine you need to access another HTTP endpoint.  You can use a HTTP client directly, this is nothing more than repeating boilerplate code.  Quarkus provides a way to call HTTP endpoints that return Rest based results easily using the MicroProfile Rest Client API."
 msgstr "ここで、別の HTTP エンドポイントにアクセスする必要があることを想像してみましょう。HTTPクライアントを直接使用することができますが、これは定型文のコードを繰り返すだけです。Quarkusは、MicroProfile Rest Client APIを使用してHTTPエンドポイントを簡単に呼び出す方法を提供しています。"
 
 #. type: Plain text
