Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:37+0000\n"
+"POT-Creation-Date: 2021-05-20 02:30+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,7 +58,31 @@ msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:19
+#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:20
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:25
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.misaligned-platform-imports]]`link:#quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.misaligned-platform-imports[quarkus.bootstrap.misaligned-platform-imports]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether to throw an error, warn or silently ignore misaligned platform BOM imports\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:26
+#, no-wrap
+msgid "`error`, `warn`, `ignore`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:28
+#, no-wrap
+msgid "`error`"
+msgstr ""
